--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@angular/platform-browser-dynamic": "6.1.7",
         "@angular/router": "6.1.7",
         "@ngui/map": "0.30.3",
+        "@sweetalert2/ngx-sweetalert2": "^5.1.0",
         "@types/googlemaps": "3.30.13",
         "animate.css": "^3.7.0",
         "arrive": "2.4.1",
@@ -37,6 +38,7 @@
         "perfect-scrollbar": "^1.4.0",
         "rxjs": "6.3.2",
         "rxjs-compat": "6.3.2",
+        "sweetalert2": "^8.16.3",
         "zone.js": "0.8.26"
     },
     "devDependencies": {
