--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
         "firebase": "^6.2.4",
         "googleapis": "33.0.0",
         "jquery": "3.3.1",
+        "ngx-mask": "^8.0.3",
+        "ngx-spinner": "^6.1.2",
         "perfect-scrollbar": "^1.4.0",
         "rxjs": "6.3.2",
         "rxjs-compat": "6.3.2",
