--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "firebase": "^6.2.4",
         "googleapis": "33.0.0",
         "jquery": "3.3.1",
+        "ngx-chips": "^1.9.8",
         "ngx-mask": "^8.0.3",
         "ngx-spinner": "^6.1.2",
         "perfect-scrollbar": "^1.4.0",
