--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
         "ngx-mask": "^8.0.3",
         "ngx-spinner": "^6.1.2",
         "perfect-scrollbar": "^1.4.0",
-        "rxjs": "6.3.2",
-        "rxjs-compat": "6.3.2",
+        "rxjs": "^6.5.3",
+        "rxjs-compat": "^6.5.3",
         "sweetalert2": "^8.16.3",
         "zone.js": "0.8.26"
     },
